2003-08-19  Rahul Bhargava <rahul032213@aol.com>

        * nsd/return.c: Updated to support HTTP/1.1 Transfer Chunk Encoding 
        Headers only.

2003-08-19  Nathan Folkman <shmooved@aol.com>

        * nsd/return.c: Updated to include status code from: 
        RFC 2616 (Hypertext Transfer Protocol -- HTTP/1.1) and
        RFC 2518 (HTTP Extensions for Distributed Authoring -- WEBDAV).

2003-08-12  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/adprequest.c: Don't log ns_adp_abort or ns_adp_break as errors.

2003-08-08  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/mimetypes.c: 
        * sample_config.tcl: Add support for xhtml mime type. (RFE #563417)

        * TAG aolserver_v4_r0_beta_11

2003-08-06  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/tclset.c: Fix ns_set split argument checking. (#757849)

2003-08-05  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/conn.c:
        * nslog/nslog.c:
        * include/ns.h:
        * sample-config.tcl: Merge in feature from 3.5 branch (with simpler 
        implementation) for logging of request execution time in access log. 

        To turn on feature add:   

        ns_section "ns/server/${servername}/module/nslog"
           ns_param logreqtime true

        By default the option is disabled. If enabled the connection's
        request time will be appended to the access log before the
        extended headers (if configured).

2003-07-18  Elizabeth Thomas <eathomas93@aol.com>

	* nsd/tclinit.c: Add optional mutex to serialize interp initialization.
        With large init scripts and many threads, there is severe malloc 
        lock contention while tcl evaluates the init script (and populates
        its memory pool). Serializing the initialization reduces the thrashing and 
        results in faster startup.

        * nsd/nsconf.c, nsconf.h, nsd.h: Add config variable 'tclinitlock'
        which activates the above. Defaults to false if not specified.

        * TAG aolserver_v4_r0_beta_10
